[gd_scene load_steps=16 format=3 uid="uid://dr7mtqhl4ihbu"]

[ext_resource type="Script" path="res://character_body_3d.gd" id="1_ij73u"]
[ext_resource type="Script" path="res://camera_3d.gd" id="2_wwv6f"]
[ext_resource type="AudioStream" uid="uid://b3nrb3i6g87t6" path="res://sounds/slide.wav" id="3_q51nf"]
[ext_resource type="AudioStream" uid="uid://bw13vp6lbyjjl" path="res://sounds/gp-impact.wav" id="4_iifgh"]
[ext_resource type="Texture2D" uid="uid://dwtwxt6e1wmp7" path="res://textures/indicator.png" id="4_lgu06"]
[ext_resource type="AudioStream" uid="uid://b8d1gdiniyeoh" path="res://sounds/dash.wav" id="5_8x44b"]
[ext_resource type="Texture2D" uid="uid://b4seyjojlkegk" path="res://textures/crosshair.png" id="6_wslwn"]
[ext_resource type="Script" path="res://gp_indicator.gd" id="8_y5oxq"]
[ext_resource type="Texture2D" uid="uid://cvpih6e3mdq1i" path="res://textures/gp_indicator.png" id="10_8n6vy"]
[ext_resource type="Script" path="res://debug_menu.gd" id="10_v47qv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_khnke"]
radius = 1.32699
height = 3.71455

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w0fkh"]

[sub_resource type="GDScript" id="GDScript_mkgou"]
script/source = "extends Sprite2D

var dash_count

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	dash_count = get_parent().get_parent().get_parent().dash_count
	
	if dash_count >= 1:
		frame = 0
	else:
		frame = 1
"

[sub_resource type="GDScript" id="GDScript_oqnrh"]
script/source = "extends Sprite2D

var dash_count


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	dash_count = get_parent().get_parent().get_parent().dash_count
	
	if dash_count > 1:
		frame = 0
	else:
		frame = 1
"

[sub_resource type="CylinderShape3D" id="CylinderShape3D_havn3"]
height = 17.9087
radius = 8.52439

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.01143, 0)
collision_layer = 2
script = ExtResource("1_ij73u")
show_debug_info = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.129902, 0)
shape = SubResource("CapsuleShape3D_khnke")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.13, 0)
visible = false
mesh = SubResource("CapsuleMesh_w0fkh")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17, 0)
fov = 14.0625
script = ExtResource("2_wwv6f")

[node name="Indicator_1" type="Sprite2D" parent="Head/Camera3D"]
position = Vector2(583, 322.25)
scale = Vector2(0.04, 0.04)
texture = ExtResource("4_lgu06")
hframes = 2
script = SubResource("GDScript_mkgou")

[node name="Indicator_2" type="Sprite2D" parent="Head/Camera3D"]
position = Vector2(583, 317.75)
scale = Vector2(0.04, 0.04)
texture = ExtResource("4_lgu06")
hframes = 2
script = SubResource("GDScript_oqnrh")

[node name="GpIndicator" type="Sprite2D" parent="Head/Camera3D"]
z_index = -1
position = Vector2(576, 325)
scale = Vector2(0.09, 0.09)
texture = ExtResource("10_8n6vy")
hframes = 2
script = ExtResource("8_y5oxq")

[node name="Crosshair" type="Sprite2D" parent="Head/Camera3D"]
position = Vector2(576, 320)
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_wslwn")

[node name="GP-impact" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="GP-impact"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.409214, 0)
shape = SubResource("CylinderShape3D_havn3")

[node name="Debug Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_right = 301.0
offset_bottom = 648.0
script = ExtResource("10_v47qv")

[node name="FPS" type="Label" parent="Debug Menu"]
offset_right = 206.0
offset_bottom = 23.0
text = "SOMETHING WRONG HERE"

[node name="Speed" type="Label" parent="Debug Menu"]
layout_mode = 0
offset_top = 19.0
offset_right = 206.0
offset_bottom = 42.0
text = "SOMETHING WRONG HERE"

[node name="SpeedMultiplier" type="Label" parent="Debug Menu"]
layout_mode = 0
offset_top = 38.0
offset_right = 206.0
offset_bottom = 61.0
text = "SOMETHING WRONG HERE"

[node name="ExtraJumpHeight" type="Label" parent="Debug Menu"]
layout_mode = 0
offset_top = 57.0
offset_right = 206.0
offset_bottom = 80.0
text = "SOMETHING WRONG HERE"

[node name="NonJumpTimer" type="Label" parent="Debug Menu"]
layout_mode = 0
offset_top = 76.0
offset_right = 206.0
offset_bottom = 99.0
text = "SOMETHING WRONG HERE"

[node name="slide" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_q51nf")
attenuation_model = 3
volume_db = 30.0
pitch_scale = 0.71

[node name="jump" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_q51nf")
attenuation_model = 3
volume_db = 30.0

[node name="gp_start" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_q51nf")
attenuation_model = 3
volume_db = 40.0
pitch_scale = 1.2

[node name="gp_impact" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_iifgh")
attenuation_model = 3
volume_db = 30.0
pitch_scale = 1.2

[node name="dash" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_8x44b")
attenuation_model = 3
volume_db = -10.0
pitch_scale = 0.95

[node name="land" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_q51nf")
attenuation_model = 3
volume_db = 30.0
pitch_scale = 1.3
